1.1.0 () -

- TD-120  Missing cmakedefine for HAVE_GET_CURRENT_DIR_NAME
          (Thanks to Jörg Krause, Ben Boeckel).
- TW-1845 Cygwin build fails, missing get_current_dir_name
          (thanks to hosaka).
- TI-42   refresh holiday script throws an error on nb-NO locale
          (thanks to Jelle van der Waa).
- Fixed Python 3 support of the holdiay/refresh script
          (thanks to Jelle van der Waa).
- Added missing man page link
          (thanks to David Patrick).

------ current release ---------------------------

1.0.0 (2016-08-17) 6428ce89fcf2a5665d9351c50c2a84c98543206c

- WWW-12  yesterday tag not recognised
          (thanks to Michel Crucifix).
- TI-34   Make timew more user-friendly by adding --help and default output
          (thanks to Felix Wolfsteller).
- Added 'totals.py' sample extension.
- Added extension list to the 'help' command.

------ old release ---------------------------

1.0.0.beta1 (2016-07-26) -

- TI-9    Task spanning over whole day should show up as taking 24:00 instead
          of 23:59
          (thanks to Tomas Babej).
- TI-10   The 'total' summands in the month report are not aligned with the
          column name
          (thanks to Tomas Babej).
- TI-11   Ids displayed incorrectly
          (thanks to Michael Meier).
- TI-12   report command does not find extensions
          (thanks to lumbric).
- TI-14   Warn when new tags are being created
          (thanks to Matthias Rieber).
- TI-16   Should handle case where taskwarrior hook is used before timew
          (thanks to Aaron Curtis).
- TI-17   ids of tracked activities should not change when editing
          (thanks to lumbric).
- TI-18   Add remove/delete command
          (thanks to lumbric).
- TI-20   Week number does not agree with Taskwarrior
          (thanks to Dirk Deimeke).
- TI-22   The 'day' chart crashes if there is an open interval and no others
- TI-25   Work week not blocked off in charts
          (thanks to Jonathon Bly).