@@ -40,3 +40,4 @@ suggestions:
   hosaka
   Aaron Evers
   David Patrick
+  Georg Sauthoff
